# vulkan-rust

./: .clang-format  .gitignore  .gitmodules  Cargo.toml  README.md  build-shaders.py  build.rs  build_shaders.py
pipeline_generator/: Cargo.toml
pipeline_generator/src/: lib.rs
pipelines/: direct_lighting.json  materials.json  mipmap.json  visibility.json
shaders/: direct_lighting.slang  materials.slang  mipmap.slang  post.slang  test.slang  visibility.slang
shaders/lib/: barycentrics.slang  bindless.slang  encoding.slang  forward.slang  material.slang  math.slang  tonemap.slang
src/: assets.rs  main.rs  rendering.rs
src/assets/: asset_manager.rs  gltf.rs  model.rs
src/assets/gltf/: types.rs
src/rendering/: buffer.rs  command_cache.rs  generated_pipelines.rs  image.rs  renderer_plugin.rs  resource_manager.rs  shader.rs  vulkan_state.rs  vulkan_utils.rs  wrappers.rs
src/rendering/components/: camera.rs
src/rendering/wrappers/: allocator.rs  device.rs  instance.rs
